Bug 301013 - marble --enableFileView file.kml does not always enables fileview for file.kml
Summary: marble --enableFileView file.kml does not always enables fileview for file.kml
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-01 19:32 UTC by sirop
Modified: 2012-06-04 08:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sirop 2012-06-01 19:32:39 UTC
marble  --enableFileView file.kml  does not always enable fileview for file.kml,
however, there is a workaround: use Menu -> File -> Open ...


Reproducible: Sometimes

Steps to Reproduce:
1. Create a file simple.kml from 
2. <?xml version="1.0" encoding="UTF-8"?>
<kml xmlns="http://www.opengis.net/kml/2.2">
<Placemark>
  <name>LinearRing.kml</name>
  <Polygon>
    <outerBoundaryIs>
      <LinearRing>
        <coordinates>
          -122.365662,37.826988,0
          -122.365202,37.826302,0
          -122.364581,37.82655,0
          -122.365038,37.827237,0
          -122.365662,37.826988,0
        </coordinates>
      </LinearRing>
    </outerBoundaryIs>
  </Polygon>
</Placemark>
</kml>
3. marble  --enableFileView simple.kml
Actual Results:  
No simple.kml under fileview,
but Menu -> File -> Open simple.kml  does show the data structure under fileview.




It somehow depends on Kml file, i.e., 
 with https://developers.google.com/kml/documentation/us_states.kml
you can see the structure of the Kml file already with
 marble  --enableFileView us_states.kml
Comment 1 Dennis Nienhüser 2012-06-04 08:16:54 UTC
Git commit 9c76a026661eb1a3373976b953a11ac5958d1b89 by Dennis Nienhüser.
Committed on 04/06/2012 at 10:14.
Pushed by nienhueser into branch 'master'.

Fix opening of files passed with relative path as argument.

M  +7    -1    src/ControlView.cpp

http://commits.kde.org/marble/9c76a026661eb1a3373976b953a11ac5958d1b89