Fix opening of files passed with relative path as argument.

BUG: 301013